First commit with FreshMedia style.

--- a/content/protocols/ecoli-heat-shock-competent-cells-preparation.html
+++ b/content/protocols/ecoli-heat-shock-competent-cells-preparation.html
@@ -1,8 +1,5 @@
-{% extends "lab.html" %}
+{% extends "base.html" %}
 {% block body %}
-<br/>
-<br/>
-
 <div class="hrecipe">
 <h2 class="fn"><i>E. coli</i> heat-shock competent cells preparation</h2>
 
