--- a/content/protocols/ecoli-heat-shock-transformation.html
+++ b/content/protocols/ecoli-heat-shock-transformation.html
@@ -1,4 +1,4 @@
-{% extends "lab.html" %}
+{% extends "base.html" %}
 {% block body %}
 <br/>
 <br/>
@@ -13,14 +13,14 @@
   </li>
   <li class="ingredient">plasmid DNA</li>
   <li class="ingredient">heating block at 42&deg;C</li>
-  <li class="ingredient">LB plates with proper antibiotic</li>
+  <li class="ingredient">LB plates with proper antibiotics</li>
 </ul>
 
 <h3 class="instructions">Procedure:</h3>
 <ol>
   <li>Turn on the heating block at 42&deg;C.</li>
   <li>Take competent cells from -80&deg;C freezer and thaw them on ice.</li>
-  <li>Pipette 10 ng (3-5 &mu;L) of DNA plasmid into competent cells while competent cells are starting to melt.</li>
+  <li>Pipette 10 ng (3-5 &mu;L) of plasmid DNA into competent cells when thawed.</li>
   <li>Keep cells with transformed DNA plasmids on ice
   for 5 minutes.</li>
   <li>Heat-shock cells at 42&deg;C
