--- a/content/protocols/freeze-kc-cells.html
+++ b/content/protocols/freeze-kc-cells.html
@@ -1,4 +1,4 @@
-{% extends "lab.html" %}
+{% extends "base.html" %}
 {% block body %}
 <br/>
 <br/>
@@ -32,7 +32,6 @@ Kc167 cells for long term storage.</p>
   <li>Leave cryotubes at -80&deg;C for 2 days.</li>
   <li>Transfer cryotubes to liquid nitrogen tank.</li>
 </ol>
-</div>
 
 <br/>
 - version <span calss="version">0.5</span>,
