--- a/content/protocols/list.html
+++ b/content/protocols/list.html
@@ -1,16 +1,6 @@
-{% extends "lab.html" %}
+{% extends "base.html" %}
 {% block body %}
-<br/>
-<br/>
-<p class="bf_separator">
-  <span style="font-size:48pt">&#8226;</span><br/>
-  <span style="font-size:24pt">Protocols<br/></span>
-  <hr style="border:0px; color:black; background-color:black; width:70%; height:1px;"/>
-</p>
-
-<br/>
-<br/>
-
+<h1>Protocols</h1>
 <p>Here are the protocols used in the lab. The key steps that have been
 optimized are <span class="optimized">highlighted</span> in the text.
 These steps can be further optimized, but we recommend following them
@@ -29,18 +19,20 @@ next to the version.
 
 <h2>Molecular biology</h2>
 <ul>
-  <li><a href="Ecoli-heat-shock-competent-cells-preparation.html"><i>E.
+  <li><a href="ecoli-heat-shock-competent-cells-preparation.html"><i>E.
 coli</i> heat-shock competent cells preparation</a></li>
   <li><a href="Ecoli-heat-shock-transformation.html"><i>E.
-coli</i> heat-shock transformation protocol</a></li>
-  <li><a href="barcoding-pcr.html">Barcoding PCR protocol</a></li>
-  <li><a href="extract-DNA-kc-cells.html">Kc cells DNA extraction protocol</a></li>
-  <li><a href="Qiagen-maxi.html">Modified Qiagen maxi-prep protocol [obsolete]</a></li>
+coli</i> heat-shock transformation</a></li>
+  <li><a href="Ecoli-electroporation.html"><i>E. coli</i>
+ electroporation protocol</a></li>
+  <li><a href="barcoding-pcr.html">Barcoding PCR</a></li>
+  <li><a href="extract-DNA-kc-cells.html">Kc cells DNA extraction</a></li>
+  <li><a href="Qiagen-maxi.html">Modified Qiagen maxi-prep [obsolete]</a></li>
 </ul>
 <h2>Cell culture</h2>
 <ul>
   <li><a href="BPYE-medium.html">BPYE medium</a></li>
-  <li><a href="freeze-kc-cells.html">Kc cells freezing protocol</a></li>
+  <li><a href="freeze-kc-cells.html">Kc cells freezing</a></li>
 </ul>
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
