Updated Google map for APIv3. Tuned the FreshMedia CSS.

--- a/content/research-lines.html
+++ b/content/research-lines.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+<div class="text">
 <h1>Research lines</h1>
 <p>The 20th century has been the triumph of genetics. However, we fully understand a mere 3% of the human genome - that is, the coding genome. More challenging is to understand how this tiny fraction is orchestrated by the much larger <strong>regulatory genome</strong>. What does the regulatory genome consist of? How does it encode information? How is it organized and how does it evolve? Contrary to the coding genome, the information of the regulatory genome is <strong>context-dependent</strong>. For example, the same promoter can have different levels of activity, the same enhancers can activate one gene or another, depending on available transcription factors and on the local chromatin marks. So the DNA sequence is not enough to understand the function of regulatory sequences. Our research lines focus on the influence of the chromatin context on transcription; and on the co-evolution between the genome and its chromatin context.</p>
 
@@ -28,7 +29,7 @@
 <p>In addition, the repeats can be modified so as to differ on exactly one nucleotide. In the process of HR this will create a mismatch which will be repaired by yet another mechanism. This allows us to study how post-HR mismatches are handled at different loci and in different chromatin contexts.</p>
 
 * CG methylation also has other functions in mammals.
+</div>
 
-  <div id="bottom_space"></div>
 {% endblock %}
 {% block section %}<div id="section" title="#research"></div>{% endblock %}
