--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -8,6 +8,7 @@
 {% block title %}Positions available at the Filion lab | The Grand Locus{% endblock %}
 
 {% block body %}
+<div class="text">
 <h1>Work with us</h1>
 
 <p>
@@ -33,4 +34,5 @@ computers and statistics.
 
 <h3>The lab</h3>
 <p>We are a newly created team at the CRG in Barcelona. "New" means we are small. "New" means we are dynamic. You can expect full training and support from the team leader. The CRG is a great place to work, with all the technical facilities, and more importantly the top scientists of Europe in a diverse range of fields. Check out the <a href="http://pasteur.crg.es/portal/page/portal/Internet/02_Research/01_Programmes">website of the CRG</a> for an overview of the research programmes.</p>
+</div>
 {% endblock %}
