--- a/content/contact.html
+++ b/content/contact.html
@@ -5,64 +5,74 @@
         content="Contact the Filion lab - bioinformatics & molecular biology laboratory at the CRG in Barcelona" />
 {% endblock %}
 
-{% block title %}Contact us{% endblock %}
+{% block title %}Contact the Filion lab{% endblock %}
 
 {% block head %}
   <link rel="stylesheet" type="text/css" media="screen"
     href="/thegrandlocus_theme/static/css/gal.css" />
 
   <!-- Google map scripts. -->
-  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBWEE5JfTKfRQkY-7vDfzaEkwksSglGCTc&sensor=true"
-      type="text/javascript"></script>
+    <script  type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWEE5JfTKfRQkY-7vDfzaEkwksSglGCTc&sensor=true"></script>
+
   <script type="text/javascript">
   function initialize() {
-    var map = new GMap2(document.getElementById("map_canvas"))
-    map.setCenter(new GLatLng(41.385450,2.194009), 4);
-    map.setMapType(G_SATELLITE_MAP);
-    map.setUIToDefault();
-    var we_are_here = new GLatLng(41.385450,2.194009);
-    map.addOverlay(new GMarker(we_are_here));
+    var mapOptions = {
+          center: new google.maps.LatLng(41.385450,2.194009),
+          zoom: 8,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map_canvas"),
+            mapOptions);
+    var marker = new google.maps.Marker({
+      position: new google.maps.LatLng(41.385450,2.194009),
+      map: map
+    });
   }
-
+    google.maps.event.addDomListener(window, 'load', initialize);
   </script>
   <!-- End Google map scripts. -->
 
   <style>
     #map_canvas {
-      float:left;
-      margin:auto;
-      width:60%;
-      height:500px;
+      float: left;
+      margin-top: 30px;
+      width: 100%;
+      height: 500px;
     }
   </style>
 {% endblock %}
 
-{% block body_tags %}onload="initialize()"{% endblock %}
+{% block body_tags %} onload="initialize()"{% endblock %}
 
 {% block body %}
-<h1>Contact us</h1>
-  <p>For scientific or professional matters, please take direct contact with Guillaume Filion
-  <script>print_mail('by email')</script>.
-  <br/>
-  We are located in the Parc de Recerca Biomedica de Barcelona (PRBB). Our complete address is the following.</p>
 
-  <br/>
-  <br/>
+  <div class="text">
+  <h1>Contact us</h1>
+  
+  <p>
+  Do not hesitate to contact
+  <script>print_mail('Guillaume Filion')</script> by mail. If you need to
+  reach us physically, 
+  we are located in the Parc de Recerca Biomedica de Barcelona (PRBB).
+  Our complete address is the following.</p>
 
   <!-- The Google map -->
-  <div id="address" style="float:left; margin-right:2em;">
-  <hr/>
+  <div class="out_part">
   Genome Architecture Team<br/>
   Centre of Genomic Regulation (CRG)<br/>
   PRBB 6<sup>th</sup> floor<br/>
   C/ Dr. Aiguader 88<br/>
   E-08003 Barcelona<br/>
   Spain<br/>
-  <hr/>
   </div>
+
   <div id="map_canvas"></div>
+  </div>
 
   
 {% endblock %}
 
-{% block section %}<div id="section" title="#contact"></div>{% endblock %}
+{% block section %}
+       <div id="section" title="#contact"></div>
+{% endblock %}
