Minor text changes.

--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -25,11 +25,16 @@ applications.
 
 <h3>Sure, but, really... why?</h3>
 <p>
-Because we like to share. We like to share our knowledge, we like
-to share our enthusiasm about research, and we like to share our
-approach to biology. We are not better than the others, and we are not
-so special really... it's just that we combine molecular biology,
-computers and statistics.
+Because we believe in sharing. We believe in sharing our knowledge and
+our enthusiasm about research.
+</p>
+
+<h3>What's so special about us?</h3>
+<p>
+Not much really, except that we try to combine <i>hard core</i>
+molecular biology, <i>hard core</i> computer sciences and
+<i>hard core</i> statistics because that's what it will take to answer
+the questions of the 21<sup>st</sup> century.
 </p>
 
 <h3>The lab</h3>
