Created alumni section in the people page.

--- a/content/people.html
+++ b/content/people.html
@@ -69,19 +69,6 @@
   <td class="picture"><img src="/static/images/Catarina_cropped.jpg"></td>
   </tr>
 
-
-  <tr>
-  <td><div class="motto">
-    <h3><strong>Ricky Lim</strong>, masters student</h3>
-    <p>“The twentieth century was the century of physics and the
-    twenty-first century will be the century of biology and technology”.
-    Whether or not you believe in it. Thinking about this inspired me:
-    I would challenge myself to integrate my biological perspectives with
-    computational approaches.</p>
-  </div></td>
-  <td class="picture"><img src="/static/images/Ricky_cropped.jpg"></td>
-  </tr>
-
   <tr>
   <td><div class="motto">
     <h3><strong>Marc Corrales</strong>, PhD student</h3>
@@ -97,8 +84,25 @@
   </div></td>
   <td class="picture"><img src="/static/images/Marc_cropped.jpg"></td>
   </tr>
+</table>
 
-  </table>
+<h2>Alumni</h2>
+
+<table id="alumni">
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Ricky Lim</strong>, masters student</h3>
+    <p>“The twentieth century was the century of physics and the
+    twenty-first century will be the century of biology and technology”.
+    Whether or not you believe in it. Thinking about this inspired me:
+    I would challenge myself to integrate my biological perspectives with
+    computational approaches.</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Ricky_cropped.jpg"></td>
+  </tr>
+</table>
+
+
 
 {% endblock %}
 {% block section %}<div id="section" title="#people"></div>{% endblock %}
