--- a/content/people.html
+++ b/content/people.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <h1>The team</h1>
-  <table id="colleagues">
+  <table class="colleagues">
   <tr>
   <td><div class="motto">
     <h3><strong>Guillaume Filion</strong>, team leader</h3>
@@ -84,11 +84,20 @@
   </div></td>
   <td class="picture"><img src="/static/images/Marc_cropped.jpg"></td>
   </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Arantxa Rosado</strong>, technician</h3>
+    <p>Coming soon...</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Arantxa_cropped.jpg"></td>
+  </tr>
+
 </table>
 
 <h2>Alumni</h2>
 
-<table id="alumni">
+<table id="alumni" class="colleagues">
   <tr>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong>, masters student</h3>
