--- a/content/people.html
+++ b/content/people.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 <h1>The team</h1>
-  <table id="colleagues">
+  <table class="colleagues">
   <tr>
   <td><div class="motto">
     <h3><strong>Guillaume Filion</strong>, team leader</h3>
@@ -21,19 +21,20 @@
   <tr>
   <td><div class="motto">
     <h3><strong>Heng-Chang Chen</strong>, technician</h3>
-    <p>Epigenetics, including CG methylation and histone
-    modifications is one of the critical
-    mechanisms involved in chromatin structure regulation and shaping.
-    Furthermore, an accumulating body of evidence indicates that
-    chromatin is able to shape genome sequence during evolution
-    through DNA repair mechanisms. I am interested in understanding
-    the connection between CG methylation and DNA repair mechanisms as
-    well as their impacts on different chromatin environments through the
-    <a href="/research-lines.html">TRiP</a> technology.</p>
-
-    <p>For more information about me, check my
-    <a href="http://www.wix.com/chenhcinaki/dzdm#!home">personal web
-    site</a>.</p>
+    <p>看不見，可是你依舊存在 is a famous article written by
+    <a href="http://en.wikipedia.org/wiki/Chiang_Ching-kuo">Ching-Kuo
+    Chiang</a> in Taiwan, which means “You exist even though you are
+    invisible”. The same is true about latent HIV-1, lying dormant in
+    various reservoirs, awaiting to revive.
+    Nowadays, latency has become the main roadblock to the development of
+    a cure for HIV-1. My project is to map latent HIV-1 integrations in
+    a high throughput setup. I call the output of this technology
+    “marauder maps”, because they expose the position of every silent HIV-1
+    integration. I am also interested in data visualisation and
+    scientific illustration.</p>
+    <p>You can visit my <a href="http://www.dzdm.co.uk">personal page</a>
+    to find out more about me.
+    </p>
   </div></td>
   <td class="picture"><img src="/static/images/HengChang_cropped.jpg"></td>
   </tr>
@@ -84,11 +85,20 @@
   </div></td>
   <td class="picture"><img src="/static/images/Marc_cropped.jpg"></td>
   </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Arantxa Rosado</strong>, technician</h3>
+    <p>Coming soon...</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Arantxa_cropped.jpg"></td>
+  </tr>
+
 </table>
 
 <h2>Alumni</h2>
 
-<table id="alumni">
+<table id="alumni" class="colleagues">
   <tr>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong>, masters student</h3>
