Added og:url for FaceBook likes.

--- a/pages/people.html
+++ b/pages/people.html
@@ -91,7 +91,15 @@
   <tr>
   <td><div class="motto">
     <h3><strong>Arantxa Rosado</strong>, technician</h3>
-    <p>Coming soon...</p>
+    <p>There are many layers of information encoded in the genome. The DNA
+sequence, the epigenetic marks and the chromatin context are the main
+players of the gene regulation machinery. To investigate the role of
+each of these factors in the process  we are developing a new
+technology TRiP (Thousand of Reporters in Parallel).
+Using TRiP we can monitor the expression and localization of reporters
+integrated at different loci in the genome. Would the chromatin invade
+the reporter or would it preserve its own identity? This questions and
+others will be hopefully answer soon :-)</p>
   </div></td>
   <td class="picture"><img src="/static/images/Arantxa_cropped.jpg"></td>
   </tr>
