Added Vika's picture and starcode page.

--- a/pages/people.html
+++ b/pages/people.html
@@ -59,21 +59,6 @@
 
   <tr>
   <td><div class="motto">
-    <h3><strong>Catarina De Oliveira</strong>, PhD student</h3>
-    <p>Transcription regulation requires coordination of transcription
-    machinery and transcription factors at promoter sites. Recently,
-    some evidence suggested that compartmentalization is also necessary
-    for genome regulation, but how chromatin context and structure
-    influences this is still unclear.
-    I am particularly interested in hormone-responsive elements and
-    how their spatial distribution affects activation of this elements
-    and consequently the transcription of downstream genes.</p>
-  </div></td>
-  <td class="picture"><img src="/static/images/Catarina_cropped.jpg"></td>
-  </tr>
-
-  <tr>
-  <td><div class="motto">
     <h3><strong>Marc Corrales</strong>, PhD student</h3>
     <p>With the advent of genome-wide, high-troughput technologies, we can
     for the first time look at genome architecture and gene regulation
@@ -112,6 +97,14 @@ others will be hopefully answer soon :-)</p>
   <td class="picture"><img src="/static/images/Pol_cropped.jpg"></td>
   </tr>
 
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Victoria Pokusaeva</strong>, technician</h3>
+    <p>Coming soon...</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Vika_cropped.jpg"></td>
+  </tr>
+
 </table>
 
 <h2>Alumni</h2>
@@ -127,6 +120,21 @@ others will be hopefully answer soon :-)</p>
     computational approaches.</p>
   </div></td>
   <td class="picture"><img src="/static/images/Ricky_cropped.jpg"></td>
+  </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Catarina De Oliveira</strong>, PhD student</h3>
+    <p>Transcription regulation requires coordination of transcription
+    machinery and transcription factors at promoter sites. Recently,
+    some evidence suggested that compartmentalization is also necessary
+    for genome regulation, but how chromatin context and structure
+    influences this is still unclear.
+    I am particularly interested in hormone-responsive elements and
+    how their spatial distribution affects activation of this elements
+    and consequently the transcription of downstream genes.</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Catarina_cropped.jpg"></td>
   </tr>
 </table>
 
