Updated starcode manual.

--- a/pages/starcode.html
+++ b/pages/starcode.html
@@ -101,6 +101,16 @@ starcode [-vs] [-d#] [-t#] [-i] INPUT_FILE [-o OUTPUT_FILE]
      clustering phase, instead of the default message passing algorithm.
 </div>
 
+<p><strong>-r or --cluster-ratio</strong> <em>ratio</em>
+</p>
+<div class="postmeta"> Specifies the minimum sequence count ratio to cluster two
+    matching sequences, i.e. the matching sequences A and B will only be clustered
+    together if count(A) > ratio * count(B), assuming that count(A) > count(B).  Note
+    that this option only applies to message passing algorithm and ratio must be set to
+    1 to cluster unique input sequences together.
+    <br>Default is 5.
+</div>
+
 <p><strong>-q or --quiet</strong>
 </p>
 <div class="postmeta">Non verbose. By default, starcode prints verbose information to the standard error channel.
