Added Eduard, new picture of Pol, and changed the base template.

--- a/pages/people.html
+++ b/pages/people.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 {% block body %}
 <h1>The team</h1>
@@ -22,7 +23,7 @@
 
   <tr>
   <td><div class="motto">
-    <h3><strong>Heng-Chang Chen</strong>, technician</h3>
+    <h3><strong>Heng-Chang Chen</strong>, post-doc</h3>
     <p>看不見，可是你依舊存在 is a famous article written by
     <a href="http://en.wikipedia.org/wiki/Chiang_Ching-kuo">Ching-Kuo
     Chiang</a> in Taiwan, which means “You exist even though you are
@@ -41,21 +42,6 @@
   <td class="picture"><img src="/static/images/HengChang_cropped.jpg"></td>
   </tr>
 
-  <tr>
-  <td><div class="motto">
-    <h3><strong>Olivera Vujatovic</strong>, post-doc</h3>
-    <p>It is very challenging working on recently available genome-wide
-    data about chromatin proteins distribution and genome sequences
-    in different species, including non-coding elements. They are
-    giving great opportunities to understand better interplay between
-    DNA and proteins that bind them, how they regulate transcription
-    and an insight into evolutionary paths that shaped them. With the
-    help of statistics one can process this big amount of the data
-    and observe general concepts that might explain questions about
-    genome functioning.</p>
-  </div></td>
-  <td class="picture"><img src="/static/images/Olivera_cropped.jpg"></td>
-  </tr>
 
   <tr>
   <td><div class="motto">
@@ -105,6 +91,14 @@ others will be hopefully answer soon :-)</p>
   <td class="picture"><img src="/static/images/Vika_cropped.jpg"></td>
   </tr>
 
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Eduard Valera</strong>, bioinformatician</h3>
+    <p>Coming soon...</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Eduard_cropped.jpg"></td>
+  </tr>
+
 </table>
 
 <h2>Alumni</h2>
@@ -112,7 +106,8 @@ others will be hopefully answer soon :-)</p>
 <table id="alumni" class="colleagues">
   <tr>
   <td><div class="motto">
-    <h3><strong>Ricky Lim</strong>, masters student</h3>
+    <h3><strong>Ricky Lim</strong></h3>
+    <h4>2012-11</h4>
     <p>“The twentieth century was the century of physics and the
     twenty-first century will be the century of biology and technology”.
     Whether or not you believe in it. Thinking about this inspired me:
@@ -124,7 +119,8 @@ others will be hopefully answer soon :-)</p>
 
   <tr>
   <td><div class="motto">
-    <h3><strong>Catarina De Oliveira</strong>, PhD student</h3>
+    <h3><strong>Catarina De Oliveira</strong></h3>
+    <h4>2012-14</h4>
     <p>Transcription regulation requires coordination of transcription
     machinery and transcription factors at promoter sites. Recently,
     some evidence suggested that compartmentalization is also necessary
@@ -135,6 +131,23 @@ others will be hopefully answer soon :-)</p>
     and consequently the transcription of downstream genes.</p>
   </div></td>
   <td class="picture"><img src="/static/images/Catarina_cropped.jpg"></td>
+  </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Olivera Vujatovic</strong></h3>
+    <h4>2012-15</h4>
+    <p>It is very challenging working on recently available genome-wide
+    data about chromatin proteins distribution and genome sequences
+    in different species, including non-coding elements. They are
+    giving great opportunities to understand better interplay between
+    DNA and proteins that bind them, how they regulate transcription
+    and an insight into evolutionary paths that shaped them. With the
+    help of statistics one can process this big amount of the data
+    and observe general concepts that might explain questions about
+    genome functioning.</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Olivera_cropped.jpg"></td>
   </tr>
 </table>
 
