--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -43,3 +43,7 @@ the questions of the 21<sup>st</sup> century.
 <p>We are a newly created team at the CRG in Barcelona. "New" means we are small. "New" means we are dynamic. You can expect full training and support from the team leader. The CRG is a great place to work, with all the technical facilities, and more importantly the top scientists of Europe in a diverse range of fields. Check out the <a href="http://pasteur.crg.es/portal/page/portal/Internet/02_Research/01_Programmes">website of the CRG</a> for an overview of the research programmes.</p>
 </div>
 {% endblock %}
+
+{% block section %}
+       <div id="section" title="#work-with-us"></div>
+{% endblock %}
