Added values of the lab. Updated people.

--- a/pages/people.html
+++ b/pages/people.html
@@ -94,7 +94,16 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Eduard Valera</strong>, bioinformatician</h3>
-    <p>Coming soon...</p>
+    <p>Since the first draft of the human genome was published, we
+    realized that our genes comprise only 2% of the full sequence. We
+    need to understand the remaining 98% to explain crucial cell
+    mechanisms such as cell differentiation or transcription regulation.
+    Most of this non-coding sequences follow complex logics that lie
+    beyond human understanding. Besides, there seems to be relevant
+    information encoded in the structural and spatial conformation of
+    the genomes. My role in the lab is to design algorithms and
+    computational methods that help us understand how these mechanisms
+    are regulated.</p>
   </div></td>
   <td class="picture"><img src="/static/images/Eduard_cropped.jpg"></td>
   </tr>
@@ -107,7 +116,7 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong></h3>
-    <h4>2012-11</h4>
+    <h4>2011-12</h4>
     <p>“The twentieth century was the century of physics and the
     twenty-first century will be the century of biology and technology”.
     Whether or not you believe in it. Thinking about this inspired me:
