Added Catalina and Ruggero.

--- a/pages/people.html
+++ b/pages/people.html
@@ -108,6 +108,32 @@ others will be hopefully answer soon :-)</p>
   <td class="picture"><img src="/static/images/Eduard_cropped.jpg"></td>
   </tr>
 
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Catalina Romero</strong>, post-doc</h3>
+    <p>Coming soon...</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Catalina_cropped.jpg"></td>
+  </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Ruggero Cortini</strong>, post-doc</h3>
+    <p>The complexity and beauty of life has always fascinated me. As
+    a physicist, the fine organization of living matter - spanning all
+    scales from molecules to organisms to ecosystems - seems to me out
+    of the reach of human comprehension. However, we now for the first
+    time have the opportunity to understand more about the biological
+    reality, having access to more and more detailed information on
+    every level of its organisation. I am interested in understanding
+    how basic physical principles, from the atomic scale to the scale
+    of the cell nucleus, translate into biological meaning. I study
+    the effect of physical interactions on the conformation of DNA
+    and proteins in the cell, seeking to make a connection to gene
+    expression and regulation.</p>
+  </div></td>
+  <td class="picture"><img src="/static/images/Ruggero_cropped.jpg"></td>
+  </tr>
 </table>
 
 <h2>Alumni</h2>
@@ -116,7 +142,7 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong></h3>
-    <h4>2011-12</h4>
+    <h4>2012-13</h4>
     <p>“The twentieth century was the century of physics and the
     twenty-first century will be the century of biology and technology”.
     Whether or not you believe in it. Thinking about this inspired me:
