Updated people page and CV.

--- a/pages/people.html
+++ b/pages/people.html
@@ -85,14 +85,6 @@ others will be hopefully answer soon :-)</p>
 
   <tr>
   <td><div class="motto">
-    <h3><strong>Victoria Pokusaeva</strong>, technician</h3>
-    <p>Coming soon...</p>
-  </div></td>
-  <td class="picture"><img src="/static/images/Vika_cropped.jpg"></td>
-  </tr>
-
-  <tr>
-  <td><div class="motto">
     <h3><strong>Eduard Valera</strong>, bioinformatician</h3>
     <p>Since the first draft of the human genome was published, we
     realized that our genes comprise only 2% of the full sequence. We
@@ -143,11 +135,11 @@ others will be hopefully answer soon :-)</p>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong></h3>
     <h4>2012-13</h4>
-    <p>“The twentieth century was the century of physics and the
+    {#<p>“The twentieth century was the century of physics and the
     twenty-first century will be the century of biology and technology”.
     Whether or not you believe in it. Thinking about this inspired me:
     I would challenge myself to integrate my biological perspectives with
-    computational approaches.</p>
+    computational approaches.</p>#}
   </div></td>
   <td class="picture"><img src="/static/images/Ricky_cropped.jpg"></td>
   </tr>
@@ -156,14 +148,14 @@ others will be hopefully answer soon :-)</p>
   <td><div class="motto">
     <h3><strong>Catarina De Oliveira</strong></h3>
     <h4>2012-14</h4>
-    <p>Transcription regulation requires coordination of transcription
+    {#<p>Transcription regulation requires coordination of transcription
     machinery and transcription factors at promoter sites. Recently,
     some evidence suggested that compartmentalization is also necessary
     for genome regulation, but how chromatin context and structure
     influences this is still unclear.
     I am particularly interested in hormone-responsive elements and
     how their spatial distribution affects activation of this elements
-    and consequently the transcription of downstream genes.</p>
+    and consequently the transcription of downstream genes.</p>#}
   </div></td>
   <td class="picture"><img src="/static/images/Catarina_cropped.jpg"></td>
   </tr>
@@ -172,7 +164,7 @@ others will be hopefully answer soon :-)</p>
   <td><div class="motto">
     <h3><strong>Olivera Vujatovic</strong></h3>
     <h4>2012-15</h4>
-    <p>It is very challenging working on recently available genome-wide
+    {#<p>It is very challenging working on recently available genome-wide
     data about chromatin proteins distribution and genome sequences
     in different species, including non-coding elements. They are
     giving great opportunities to understand better interplay between
@@ -180,10 +172,20 @@ others will be hopefully answer soon :-)</p>
     and an insight into evolutionary paths that shaped them. With the
     help of statistics one can process this big amount of the data
     and observe general concepts that might explain questions about
-    genome functioning.</p>
+    genome functioning.</p>#}
   </div></td>
   <td class="picture"><img src="/static/images/Olivera_cropped.jpg"></td>
   </tr>
+
+  <tr>
+  <td><div class="motto">
+    <h3><strong>Victoria Pokusaeva</strong>, technician</h3>
+    <h4>2014-16</h4>
+    {#<p>Coming soon...</p>#}
+  </div></td>
+  <td class="picture"><img src="/static/images/Vika_cropped.jpg"></td>
+  </tr>
+
 </table>
 
 
