Changed styling of alumni.

--- a/pages/people.html
+++ b/pages/people.html
@@ -134,7 +134,7 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Ricky Lim</strong></h3>
-    <h4>2012-13</h4>
+    <h4>Student (2012-13)</h4>
     {#<p>“The twentieth century was the century of physics and the
     twenty-first century will be the century of biology and technology”.
     Whether or not you believe in it. Thinking about this inspired me:
@@ -147,7 +147,7 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Catarina De Oliveira</strong></h3>
-    <h4>2012-14</h4>
+    <h4>PhD student (2012-14)</h4>
     {#<p>Transcription regulation requires coordination of transcription
     machinery and transcription factors at promoter sites. Recently,
     some evidence suggested that compartmentalization is also necessary
@@ -163,7 +163,7 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Olivera Vujatovic</strong></h3>
-    <h4>2012-15</h4>
+    <h4>Post-doc (2012-15)</h4>
     {#<p>It is very challenging working on recently available genome-wide
     data about chromatin proteins distribution and genome sequences
     in different species, including non-coding elements. They are
@@ -179,8 +179,8 @@ others will be hopefully answer soon :-)</p>
 
   <tr>
   <td><div class="motto">
-    <h3><strong>Victoria Pokusaeva</strong>, technician</h3>
-    <h4>2014-16</h4>
+    <h3><strong>Victoria Pokusaeva</strong></h3>
+    <h4>Technician (2014-16)</h4>
     {#<p>Coming soon...</p>#}
   </div></td>
   <td class="picture"><img src="/static/images/Vika_cropped.jpg"></td>
