Added expectations to page "Work with us".

--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -20,7 +20,7 @@ applications. I also invite you to read my tips on
 to write a cover letter</a> before applying.
 </p>
 
-<h3>Our values</h3>
+<h3>Values</h3>
 Working in a research laboratory is not only about publishing great papers.
 It is also about sharing a culture.  Over the years, we have come to value:
 
@@ -42,6 +42,40 @@ done.
 <p><strong>Team work</strong> over championship. This means that we
 continuously seek synergies with others. It also means that we have
 responsibility towards them.
+</p>
+
+<h3>Expectations</h3>
+<p><strong>All team members</strong> are expected to seek each other's trust.
+We trust our colleagues to work well and on time. We also trust them to
+adhere to the basic principles of scientific and human good conduct.
+We show our colleagues that we are worthy of their trust by working well
+and on time, and by adhering to the basic principles of scientific and
+human good conduct.
+</p>
+
+<p><strong>Interns</strong> are expected to acquire the scientific work
+ethics by two weeks. They are expected to adapt their schedule to the
+needs of their mentor.
+</p>
+
+<p><strong>PhD students</strong> are expected to learn what they need as
+fast as possible in order to be fully operational before the end of their
+PhD. They are expected to acquire the technical skill by the first year
+and to acquire the principles of academic communication (how to write
+papers, how to write a rebuttal, how to make posters, how to go to
+congresses and how to give a scientific talk) by the third year.
+</p>
+
+<p><strong>Post-docs</strong> are expected to be competent in academic
+communication (they must how to write papers, how to write a rebuttal, how
+to make posters, how to go to congresses and how to give a scientific talk).
+They are expected to learn the technical skills by six months. They are
+not expected to work alone and write their own papers, but they are expected
+to be able to do so.
+</p>
+
+<p><strong>Technicians</strong> are expected to consider themselves as a
+scientist like any other member of the team.
 </p>
 
 </div>
